lib/kube/shared/operate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $KUBE_APP-operate-service
  namespace: $KUBE_NS
  labels:
    app: $KUBE_APP
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: $KUBE_APP-operate
