lib/kube/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $KUBE_APP-ingress
  namespace: $KUBE_NS
  labels:
    app: $KUBE_APP
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - $KUBE_INGRESS_HOSTNAME
        - $KUBE_INGRESS_WORKER_HOSTNAME
      secretName: $KUBE_APP-cert-key
  rules:
    - host: $KUBE_INGRESS_HOSTNAME
      http:
        paths:
          - pathType: Prefix
            path: '/operate'
            backend:
              service:
                name: $KUBE_APP-operate-service
                port:
                  number: 8080
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: $KUBE_APP-service
                port:
                  number: 8080
    - host: $KUBE_INGRESS_WORKER_HOSTNAME
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: $KUBE_APP-flower
                port:
                  number: 5555
